agent_receiver: Move cert utilities for tests
Change-Id: I1e59009e205cc3860181ce6f96b50aa0576ccc74

--- a/packages/cmk-agent-receiver/BUILD
+++ b/packages/cmk-agent-receiver/BUILD
@@ -87,6 +87,7 @@ py_library(
     imports = ["."],
     deps = [
         ":cmk-agent-receiver",
+        requirement("cryptography"),
         requirement("fastapi"),
         requirement("httpx"),
     ],
