Ignore implicit-function-declaration warnings for nrpe
Fixes the following compilation errors:

    ./check_nrpe.c: In function 'setup_ssl':
    ./check_nrpe.c:825:17: error: implicit declaration of function 'ENGINE_load_builtin_engines' [-Wimplicit-function-declaration]
      825 |                 ENGINE_load_builtin_engines();
          |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~
    ./check_nrpe.c:826:17: error: implicit declaration of function 'RAND_set_rand_engine'; did you mean 'RAND_set_rand_method'? [-Wimplicit-function-declaration]
      826 |                 RAND_set_rand_engine(NULL);
          |                 ^~~~~~~~~~~~~~~~~~~~
          |                 RAND_set_rand_method
    ./check_nrpe.c:827:17: error: implicit declaration of function 'ENGINE_register_all_complete' [-Wimplicit-function-declaration]
      827 |                 ENGINE_register_all_complete();
          |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~

CMK-17203

Change-Id: Ia0dadcf1117bfbc7b25f4deca882253f266fe14f

--- a/omd/packages/nrpe/BUILD.nrpe.bazel
+++ b/omd/packages/nrpe/BUILD.nrpe.bazel
@@ -22,6 +22,9 @@ configure_make(
     configure_options = [
         "--with-ssl=$EXT_BUILD_DEPS/openssl",
     ],
+    copts = [
+        "-Wno-implicit-function-declaration",
+    ],
     lib_source = ":all_srcs",
     out_bin_dir = "lib/nagios/plugins",
     out_binaries = [
