Switch to hermetic glib and libxml2
Change-Id: I846c952e733e61a45dde1fa06c761be8736ea0a9

--- a/omd/packages/rrdtool/BUILD.rrdtool-native.bazel
+++ b/omd/packages/rrdtool/BUILD.rrdtool-native.bazel
@@ -81,7 +81,7 @@ cc_library(
     ],
     deps = [
         ":rrd_config",
-        "@glib",
+        "@glib//glib",
         "@libxml2",
     ],
 )
@@ -150,7 +150,8 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         ":rrd_library",
-        "@glib",
+        "@glib//glib",
+        "@glib//gobject",
     ],
 )
 
@@ -199,7 +200,7 @@ cc_binary(
     deps = [
         ":rrd_library",
         ":rrdupd",
-        "@glib",
+        "@glib//glib",
     ],
 )
 
