--- a/omd/packages/rrdtool/BUILD.rrdtool-native.bazel
+++ b/omd/packages/rrdtool/BUILD.rrdtool-native.bazel
@@ -81,7 +81,7 @@ cc_library(
     ],
     deps = [
         ":rrd_config",
-        "@glib//glib",
+        "@glib",
         "@libxml2",
     ],
 )
@@ -150,8 +150,7 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         ":rrd_library",
-        "@glib//glib",
-        "@glib//gobject",
+        "@glib",
     ],
 )
 
@@ -200,7 +199,7 @@ cc_binary(
     deps = [
         ":rrd_library",
         ":rrdupd",
-        "@glib//glib",
+        "@glib",
     ],
 )
 
