Add iproute2 package to Ubuntu 24.04 image and use in ClickHouse int. test
Change-Id: I2e1543cd79de7e9b8986fcab12765949dd46ae70

--- a/buildscripts/infrastructure/build-nodes/ubuntu-24.04/Dockerfile
+++ b/buildscripts/infrastructure/build-nodes/ubuntu-24.04/Dockerfile
@@ -46,6 +46,7 @@ RUN apt-get install -y --fix-missing \
     gettext \
     git-buildpackage \
     gtk-doc-tools \
+    iproute2 \
     iputils-ping \
     joe \
     jq \
