--- a/editions.yml
+++ b/editions.yml
@@ -14,6 +14,7 @@ common: &common
     - "sles-15sp4"
     - "sles-15sp5"
     - "sles-15sp6"
+    - "sles-15sp7"
 
 # A reduced set of distros for the daily builds
 # Containing only the latest version of each supported OS
@@ -24,6 +25,7 @@ daily_reduced: &daily_reduced
     - "ubuntu-24.04"
     - "debian-10"
     - "sles-15sp6"
+    - "sles-15sp7"
 
 # Builds for those distros will only be available internally for development purpose
 # internal_distros: &internal_distros
