Add md5sum file to debian package
CMK-27393

Change-Id: Iff01ab00a1c34eb0a79cfd22da3e49478bee54c0

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -155,6 +155,12 @@ single_version_override(
 )
 
 single_version_override(
+    module_name = "rules_pkg",
+    patch_strip = 1,
+    patches = ["//bazel/patches:rules_pkg1-pkg_deb-add-support-for-md5sums.patch"],
+)
+
+single_version_override(
     module_name = "rules_python",
     patch_strip = 1,
     patches = [
