Add iproute package to AlmaLinux images and use in ClickHouse int. test
Change-Id: I9e0bac31c3e481af02c290b6f1bd1351add6feb9

--- a/buildscripts/infrastructure/build-nodes/almalinux-10/Dockerfile
+++ b/buildscripts/infrastructure/build-nodes/almalinux-10/Dockerfile
@@ -44,6 +44,7 @@ RUN yum -y makecache \
     gmp-devel \
     gtk-doc \
     httpd-devel \
+    iproute \
     kernel-headers \
     libXpm-devel \
     libevent-devel \
