--- a/buildscripts/infrastructure/build-nodes/almalinux-8/Dockerfile
+++ b/buildscripts/infrastructure/build-nodes/almalinux-8/Dockerfile
@@ -40,6 +40,7 @@ RUN yum -y makecache \
     gettext \
     gtk-doc \
     httpd-devel \
+    iproute \
     kernel-headers \
     libXpm-devel \
     libevent-devel \
