--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -583,6 +583,7 @@ http_archive(
         "//omd/packages/net-snmp/patches:0017-no-fallthrough.dif",
         "//omd/packages/net-snmp/patches:0018-update-user-information-for-python.dif",
         "//omd/packages/net-snmp/patches:0019-Fix-NULL-varbind-in-get-getnext.dif",  # submitted as https://github.com/net-snmp/net-snmp/pull/1027
+        "//omd/packages/net-snmp/patches:0020-fix-bad-mib.dif",
     ],
     sha256 = "75b59d67e871aaaa31c8cef89ba7d06972782b97736b7e8c3399f36b50a8816f",
     strip_prefix = "net-snmp-5.9.1",
