Make xfailed tests actually fail test suite
If xfailed tests don't fail without strict=true pytest will still exit 0

Not having this risks having stale "xfails" which no one will be
notified if they might be green again effectively just skipping it.

Change-Id: Idd927abb791ae8f21e9cdd80cc0223b6a8a4fd28

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,9 @@ extend-exclude = ["doc/**/*.py"]
 target-version = "py313"
 line-length = 100
 
+[pytest]
+xfail_strict = true
+
 [tool.ruff.lint]
 select = [
   "A",      # flake8: builtins
