Moved cmk.utils.regex to cmk.ccc
The previous location in cmk.utils blocks quite a few
other places from being moved into separate packages.

Change-Id: Ie505fea3d6d569981d0c72bd9dcc3c0f4a89bcaf

--- a/packages/cmk-ccc/BUILD
+++ b/packages/cmk-ccc/BUILD
@@ -131,6 +131,18 @@ py_library(
 )
 
 py_library(
+    name = "regex",
+    srcs = ["cmk/ccc/regex.py"],
+    imports = ["."],
+    visibility = ["//visibility:public"],
+    deps = [
+        "_init",
+        "exceptions",
+        "i18n",
+    ],
+)
+
+py_library(
     name = "site",
     srcs = ["cmk/ccc/site.py"],
     imports = ["."],
@@ -280,6 +292,21 @@ py_test(
     deps = [
         "__test__",
         "site",
+        requirement("pytest"),
+    ],
+)
+
+py_test(
+    name = "regex-tests",
+    size = "small",
+    srcs = [
+        "__test__.py",
+        "tests/test_regex.py",
+    ],
+    main = "__test__.py",
+    deps = [
+        "__test__",
+        "regex",
         requirement("pytest"),
     ],
 )
