Reapply fixed: Moved cmk.utils.regex to cmk.ccc
The previous location in cmk.utils blocks quite a few
other places from being moved into separate packages.

Change-Id: I893fd83664e83826f019e202f37e34fd528904c5

--- a/cmk/BUILD
+++ b/cmk/BUILD
@@ -195,6 +195,7 @@ CMK_PACKAGES = [
     "//packages/cmk-ccc:observer",
     "//packages/cmk-ccc:plugin-registry",
     "//packages/cmk-ccc:profile",
+    "//packages/cmk-ccc:regex",
     "//packages/cmk-ccc:resulttype",
     "//packages/cmk-ccc:site",
     "//packages/cmk-ccc:store",
