Reapply fixed: Moved cmk.utils.translations to cmk.ccc
Change-Id: Ia022e27e076a160e1b970de0cdc607375f2210e5

--- a/cmk/BUILD
+++ b/cmk/BUILD
@@ -200,6 +200,7 @@ CMK_PACKAGES = [
     "//packages/cmk-ccc:site",
     "//packages/cmk-ccc:store",
     "//packages/cmk-ccc:timeout",
+    "//packages/cmk-ccc:translations",
     "//packages/cmk-ccc:tty",
     "//packages/cmk-ccc:user",
     "//packages/cmk-ccc:version",
