--- a/packages/cmk-ccc/BUILD
+++ b/packages/cmk-ccc/BUILD
@@ -172,6 +172,17 @@ py_library(
 )
 
 py_library(
+    name = "translations",
+    srcs = ["cmk/ccc/translations.py"],
+    imports = ["."],
+    visibility = ["//visibility:public"],
+    deps = [
+        "_init",
+        "regex",
+    ],
+)
+
+py_library(
     name = "user",
     srcs = ["cmk/ccc/user.py"],
     imports = ["."],
@@ -231,6 +242,7 @@ _ALL = [
     "site",
     "store",
     "timeout",
+    "translations",
     "tty",
     "user",
     "version",
@@ -323,6 +335,21 @@ py_test(
     deps = [
         "__test__",
         "resulttype",
+        requirement("pytest"),
+    ],
+)
+
+py_test(
+    name = "translations-tests",
+    size = "small",
+    srcs = [
+        "__test__.py",
+        "tests/test_translations.py",
+    ],
+    main = "__test__.py",
+    deps = [
+        "__test__",
+        "translations",
         requirement("pytest"),
     ],
 )
