Speed up startup of special agents using `clickhouse-connect`
`clickhouse-connect` tries to import `numpy` but is fine with not finding it.
This import consumes significant CPU time. Since we don't need any functionality
requiring `numpy`, avoiding this import results in an immediate speed up.

This is of course just a temporary workaround. We are trying to solve this
upstream:
https://github.com/ClickHouse/clickhouse-connect/issues/589

Change-Id: I4849d760ef25dae93893c33c61fa43a338858815

--- a/requirements.txt
+++ b/requirements.txt
@@ -2854,6 +2854,7 @@ numpy==2.3.4 \
     --hash=sha256:fea80f4f4cf83b54c3a051f2f727870ee51e22f0248d3114b8e755d160b38cfb
     # via
     #   -r cmk/requirements.in
+    #   -r non-free/packages/cmk-metric-backend/dev-requirements.in
     #   contourpy
     #   matplotlib
 oauthlib==3.3.1 \
