packaging: fix file exclude pattern
Change-Id: I667409b3d4a3e79821efc72e52291539b9d61771

--- a/agents/cfg_examples/BUILD
+++ b/agents/cfg_examples/BUILD
@@ -2,7 +2,11 @@ filegroup(
     name = "srcs",
     srcs = glob(
         ["**"],
-        exclude = ["BUILD"],
+        exclude = [
+            "BUILD",
+            "**/OWNERS",
+            "**/.f12",
+        ],
     ),
     visibility = ["//visibility:public"],
 )
