--- a/omd/packages/check_mk/BUILD
+++ b/omd/packages/check_mk/BUILD
@@ -89,6 +89,7 @@ pkg_files(
             "skel/etc/init.d/*",
             "skel/etc/rc.d/*",
             "**/.gitignore",
+            "**/OWNERS",
         ],
     ),
     strip_prefix = strip_prefix.from_pkg(""),
