--- a/agents/z_os/BUILD
+++ b/agents/z_os/BUILD
@@ -2,7 +2,11 @@ filegroup(
     name = "srcs",
     srcs = glob(
         ["**"],
-        exclude = ["BUILD"],
+        exclude = [
+            "BUILD",
+            "**/OWNERS",
+            "**/.f12",
+        ],
     ),
     visibility = ["//visibility:public"],
 )
