Fixup minimal image usage comment
Change-Id: I0aad155f02257b9e32003c1f90f585b120551bad

--- a/buildscripts/infrastructure/build-nodes/minimal/Dockerfile
+++ b/buildscripts/infrastructure/build-nodes/minimal/Dockerfile
@@ -7,7 +7,7 @@
 # --workdir /checkmk \
 # -v ./:/checkmk \
 # -v /var/run/docker.sock:/var/run/docker.sock \
-# --user ubuntu
+# --user ubuntu \
 # --name ubuntu-minimal \
 # minimal-ubuntu-checkmk-master:latest bash
 #
