cmk-crypto: Make package available to non-free packages
Change-Id: Iee971c4d9c01210755a3d648a5808b2792a51bef

--- a/packages/cmk-crypto/BUILD
+++ b/packages/cmk-crypto/BUILD
@@ -30,6 +30,7 @@ py_library(
     imports = ["."],
     visibility = [
         "//cmk:__pkg__",
+        "//non-free/packages:__subpackages__",
         "//packages:__subpackages__",
     ],
     deps = [
