--- a/packages/cmk-plugins/BUILD
+++ b/packages/cmk-plugins/BUILD
@@ -1,8 +1,18 @@
 load("@aspect_rules_py//py:defs.bzl", "py_library", "py_pytest_main", "py_test")
 load("@cmk_requirements//:requirements.bzl", "requirement")
+load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
 load("@rules_python//python:packaging.bzl", "py_wheel")
 load("//bazel/rules:doctest.bzl", "py_doc_test")
 load("//bazel/rules:package_wheel.bzl", "package_wheel")
+load("//omd/packages/Python:version.bzl", "PYTHON_MAJOR_DOT_MINOR")
+
+FAMILIES = [
+    d.removeprefix("cmk/plugins/")
+    for d in glob(
+        ["cmk/plugins/*"],
+        exclude_directories = 0,
+    )
+]
 
 exports_files([
     "dev-requirements.in",
@@ -17,58 +27,24 @@ py_pytest_main(
     ],
 )
 
+py_doc_test(
+    name = "doctest",
+    size = "small",
+    srcs = [":%s" % f for f in FAMILIES],
+    tags = ["no-mypy"],
+)
+
 py_library(
     name = "lib",
-    srcs = [
-        "cmk/plugins/lib/cache_helper.py",
-        "cmk/plugins/lib/container_cgroupv2.py",
-        "cmk/plugins/lib/cpu.py",
-        "cmk/plugins/lib/cpu_load.py",
-        "cmk/plugins/lib/cpu_util.py",
-        "cmk/plugins/lib/cpu_utilization_os.py",
-        "cmk/plugins/lib/db.py",
-        "cmk/plugins/lib/device_types.py",
-        "cmk/plugins/lib/df.py",
-        "cmk/plugins/lib/dhcp_pools.py",
-        "cmk/plugins/lib/diskstat.py",
-        "cmk/plugins/lib/elphase.py",
-        "cmk/plugins/lib/entity_mib.py",
-        "cmk/plugins/lib/entity_sensors.py",
-        "cmk/plugins/lib/eval_regex.py",
-        "cmk/plugins/lib/fan.py",
-        "cmk/plugins/lib/humidity.py",
-        "cmk/plugins/lib/if64.py",
-        "cmk/plugins/lib/interfaces.py",
-        "cmk/plugins/lib/inventory_interfaces.py",
-        "cmk/plugins/lib/ip_format.py",
-        "cmk/plugins/lib/labels.py",
-        "cmk/plugins/lib/lnx_if.py",
-        "cmk/plugins/lib/memory.py",
-        "cmk/plugins/lib/mssql_counters.py",
-        "cmk/plugins/lib/multipath.py",
-        "cmk/plugins/lib/node_exporter.py",
-        "cmk/plugins/lib/ps.py",
-        "cmk/plugins/lib/size_trend.py",
-        "cmk/plugins/lib/tcp_connections.py",
-        "cmk/plugins/lib/temperature.py",
-        "cmk/plugins/lib/timesync.py",
-        "cmk/plugins/lib/ucd_hr_detection.py",
-        "cmk/plugins/lib/uptime.py",
-        "cmk/plugins/lib/wlc_clients.py",
-    ],
+    srcs = glob([
+        "cmk/plugins/lib/**/*.py",
+    ]),
     data = ["cmk/plugins/lib/py.typed"],
     imports = ["."],
     visibility = ["//visibility:public"],
     deps = [
         "//packages/cmk-plugin-apis:agent_based",
     ],
-)
-
-py_doc_test(
-    name = "doctest",
-    size = "small",
-    srcs = [":lib"],
-    tags = ["no-mypy"],
 )
 
 py_test(
@@ -121,6 +97,28 @@ py_test(
     ],
 )
 
+filegroup(
+    name = "py_typed",
+    srcs = [
+        "cmk/plugins/%s/py.typed" % f
+        for f in FAMILIES
+    ],
+)
+
+[pkg_files(
+    name = "libexec-%s" % family,
+    srcs = glob(
+        [
+            "cmk/plugins/%s/libexec/*" % family,
+        ],
+        allow_empty = True,
+    ),
+    attributes = pkg_attributes(
+        mode = "0755",
+    ),
+    prefix = "lib/python%s/site-packages/cmk/plugins/%s/libexec" % (PYTHON_MAJOR_DOT_MINOR, family),
+) for family in FAMILIES]
+
 py_wheel(
     name = "wheel",
     distribution = "cmk-plugins",
@@ -128,20 +126,14 @@ py_wheel(
     # TODO: Duplicated from pyproject.toml
     version = "1.0.0",
     deps = [
-        ":lib",
-        ":netapp",
+        ":%s" % f
+        for f in FAMILIES
     ],
-)
-
-filegroup(
-    name = "py_typed",
-    srcs = glob([
-        "cmk/plugins/**/py.typed",
-    ]),
 )
 
 package_wheel(
     name = "pkg_tar",
+    additional_files = [":libexec-%s" % f for f in FAMILIES],
     visibility = ["//visibility:public"],
     whl = "wheel",
 )
