Include mk-oracle built on RHEL8 in all packages
Change-Id: I64fe618fe3467842af30dc2a6838d23c1cacb7f4

--- a/omd/packages/mk-oracle/BUILD
+++ b/omd/packages/mk-oracle/BUILD
@@ -3,9 +3,13 @@ load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
 
 pkg_files(
     name = "mk-oracle_pkg",
-    srcs = ["//packages/mk-oracle"],
+    # HACK
+    # * mk-oracle needs to be build against an old glibc version to run on older systems
+    # * that's why we pre-built it on a rhel8 before-hand and put it in the workspace
+    # * see package_helper.groovy
+    srcs = [":mk-oracle.rhel8"],
     attributes = pkg_attributes(mode = "0755"),
-    renames = {"//packages/mk-oracle:mk-oracle": "lib/python3/cmk/plugins/oracle/agents/mk-oracle"},
+    renames = {":mk-oracle.rhel8": "lib/python3/cmk/plugins/oracle/agents/mk-oracle"},
     tags = ["manual"],
 )
 
