ec: Added bazel code to compile mibs for pysnmp
Change-Id: I61727caaef20ec8fffca9c98a82fbcc2f19f82f5

--- a/omd/packages/net-snmp/BUILD.net-snmp.bazel
+++ b/omd/packages/net-snmp/BUILD.net-snmp.bazel
@@ -9,6 +9,12 @@ filegroup(
     ),
 )
 
+filegroup(
+    name = "mibs",
+    srcs = glob(["mibs/*.txt"]),
+    visibility = ["//visibility:public"],
+)
+
 configure_make(
     name = "net-snmp",
     args = ["-j4"],
