ec: Added bazel code to compile mibs for pysnmp
Change-Id: I61727caaef20ec8fffca9c98a82fbcc2f19f82f5

--- a/omd/packages/net-snmp/BUILD
+++ b/omd/packages/net-snmp/BUILD
@@ -1,7 +1,10 @@
+load("@aspect_rules_py//py:defs.bzl", "py_binary")
+load("@cmk_requirements//:requirements.bzl", "requirement")
 load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_filegroup", "pkg_files", "pkg_mkdirs")
 load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
 load("//bazel/rules:exclude_from_filegroup.bzl", "exclude_from_filegroup")
 load("//bazel/rules:make_deployable.bzl", "make_deployable_dir", "make_deployable_file")
+load("//omd/packages/net-snmp:snmp-rules.bzl", "snmp_compile_mibs")
 
 bin_paths = [
     "encode_keychange",
@@ -88,7 +91,26 @@ pkg_filegroup(
 
 pkg_tar(
     name = "net-snmp_tar",
-    srcs = [":net-snmp_files_pkg"],
+    srcs = [
+        ":generate_python_mibs",
+        ":net-snmp_files_pkg",
+    ],
     package_file_name = "net-snmp.tar",
     visibility = ["//visibility:public"],
+)
+
+snmp_compile_mibs(
+    name = "generate_python_mibs",
+    compiler = ":compile_mibs",
+    mibs = ["@net-snmp//:mibs"],
+    tags = ["manual"],
+)
+
+py_binary(
+    name = "compile_mibs",
+    srcs = ["compile_mibs.py"],
+    tags = ["manual"],
+    deps = [
+        requirement("pysmi"),
+    ],
 )
