--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -104,6 +104,14 @@ git_override(
 )
 
 single_version_override(
+    module_name = "rules_go",
+    patch_strip = 1,
+    patches = [
+        "bazel/patches/rules_go-honor-action-envs.patch",
+    ],
+)
+
+single_version_override(
     module_name = "aspect_rules_lint",
     patch_strip = 1,
     patches = [
