omd: create `.restore_working_dir`
CMK-27297

Change-Id: Ieb0980547f6eed2622f3efb1812447b55dc98205

--- a/omd/packages/omd/BUILD
+++ b/omd/packages/omd/BUILD
@@ -261,6 +261,7 @@ pkg_tar(
     }),
     empty_dirs = [
         "lib/omd/scripts/post-create",
+        "skel/.restore_working_dir",
         "skel/etc/omd",
         "skel/etc/xinetd.d",
         "skel/local/bin",
