--- a/buildscripts/scripts/stages.yml
+++ b/buildscripts/scripts/stages.yml
@@ -770,3 +770,9 @@ STAGES:
       DIR: ""
       COMMAND: "scripts/run-uvenv ci-artifacts --credentials url_env=JENKINS_URL,username_env=JENKINS_USERNAME,password_env=JENKINS_PASSWORD --log-level info validate checkmk/master/builders/trigger-cmk-distro-package --params=DISTRO=ubuntu-24.04,VERSION=daily,EDITION=enterprise,CUSTOM_GIT_REF=${PATCHSET_REVISION}"
       TEXT_ON_SKIP: "No package dependencies changed"
+
+    - NAME: "Enforced relay build"
+      ONLY_WHEN_NOT_EMPTY: CHANGED_PYTHON_REQUIREMENTS,CHANGED_BAZEL_MODULES,CHANGED_BAZEL_FILES,CHANGED_MAKEFILE
+      DIR: ""
+      COMMAND: "bazel build --cmk_version=$(make print-VERSION) //omd/non-free/relay:image_tar"
+      TEXT_ON_SKIP: "No package dependencies changed"
