Add `lcov` via bazel_env and use it
Change-Id: Iaa27dff7b9f7b409a074c4460116d34decf7adc0

--- a/bazel/tools/BUILD
+++ b/bazel/tools/BUILD
@@ -86,5 +86,6 @@ bazel_env(
         "osslsigncode": "@osslsigncode",
         "pnpm": "@pnpm",
         "uv": "@multitool//tools/uv",
+        "genhtml": "@lcov//:genhtml",
     },
 )
