--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -41,6 +41,7 @@ bazel_dep(name = "rules_uv", version = "0.71.0")
 bazel_dep(name = "toolchains_musl", version = "0.1.20")
 bazel_dep(name = "clickhouse", version = "v25.8.11.66-lts")
 bazel_dep(name = "rules_sphinx", version = "0.2.0")
+bazel_dep(name = "lcov", version = "2.3.2")
 
 # rules_sphinx is not yet on BCR
 git_override(
