Wrap system executables for systems using OpenSSL 3.5
Required for baking agents.

SUP-26565

Change-Id: Iac8c48cf09a9b4973e3e2adba8e12a02d50eef0c

--- a/bazel/cmk/distro/BUILD.bazel
+++ b/bazel/cmk/distro/BUILD.bazel
@@ -44,6 +44,14 @@ selects.config_setting_group(
     ],
 )
 
+selects.config_setting_group(
+    name = "almalinux-9+",
+    match_any = [
+        ":almalinux-9",
+        ":almalinux-10",
+    ],
+)
+
 config_setting(
     name = "debian-12",
     flag_values = {":distro": "debian-12"},
