Set package name correctly in DEBIAN/control
This includes package name, edition and version

CMK-27394

Change-Id: If747282716db40a442bebfb190f177f320d65aa5

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -158,7 +158,10 @@ single_version_override(
 single_version_override(
     module_name = "rules_pkg",
     patch_strip = 1,
-    patches = ["//bazel/patches:rules_pkg1-pkg_deb-add-support-for-md5sums.patch"],
+    patches = [
+        "//bazel/patches:rules_pkg1-pkg_deb-add-support-for-md5sums.patch",
+        "//bazel/patches:rules_pkg_expand-variables-in-package-name.diff",
+    ],
 )
 
 single_version_override(
