--- a/packages/cmk-shared-typing/source/configuration_entity.json
+++ b/packages/cmk-shared-typing/source/configuration_entity.json
@@ -2,5 +2,5 @@
   "$schema": "https://json-schema.org/draft/2019-09/schema",
   "type": "string",
   "title": "ConfigEntityType",
-  "enum": ["notification_parameter", "folder", "passwordstore_password"]
+  "enum": ["notification_parameter", "folder", "passwordstore_password", "rule_form_spec"]
 }
