Move groovy format{.check} to rules_lint
and remove it from the plain `npx` invocation

Change-Id: I38b6fd3378b070b3e6a0f899f4a78ac1a8ab3aae

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -120,6 +120,7 @@ single_version_override(
         # quickfix non-erroneous return code on linting with ruff
         # https://github.com/aspect-build/rules_lint/issues/495
         "//bazel/patches:rules_lint-ruff_quickfix.patch",
+        "//bazel/patches:rules_lint-groovy.patch",
     ],
 )
 
