--- a/bazel/tools/package.json
+++ b/bazel/tools/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "5.2.2",
     "@vue/compiler-sfc": "^3.5.22",
-    "prettier": "3.6.2"
+    "prettier": "3.6.2",
+    "npm-groovy-lint": "15.2.1"
   }
 }
