clean up dependencies: ListExtended
Now that we have the 'internal' API namespaces,
we should probably move most of these there.
I'm only moving this one now, as cleaning
up the 'kube' family is my priority.

Change-Id: Ic4f38cf292737a852ed7ba85ad196c6fe657fda6

--- a/packages/cmk-plugin-apis/BUILD
+++ b/packages/cmk-plugin-apis/BUILD
@@ -89,6 +89,7 @@ py_library(
         "cmk/rulesets/__init__.py",
         "cmk/rulesets/internal/__init__.py",
         "cmk/rulesets/internal/form_specs/__init__.py",
+        "cmk/rulesets/internal/form_specs/_extended.py",
         "cmk/rulesets/internal/form_specs/_migrations.py",
         "cmk/rulesets/internal/form_specs/_preconfigured.py",
         "cmk/rulesets/v1/__init__.py",
