Move groovy lint to a `bazel run`
and switch off linters where our code base is totally broken.
we need to fix them in a dedicated ticket

Change-Id: I4c532d74f8b943907e5644b479deaf987302682c

--- a/bazel/tools/.groovylintrc.json
+++ b/bazel/tools/.groovylintrc.json
@@ -1,5 +1,4 @@
 {
-  "extends": "recommended",
   "rules": {
     "basic.DeadCode": "error",
     "convention.CompileStatic": "off",
@@ -12,10 +11,8 @@
     "design.Instanceof": "off",
     "dry.DuplicateListLiteral": "info",
     "dry.DuplicateMapLiteral": "warning",
-    "dry.DuplicateStringLiteral": {
-      "ignoreStrings": "nexus",
-      "severity": "info"
-    },
+    "dry.DuplicateStringLiteral": "off",
+    "dry.DuplicateNumberLiteral": "off",
     "exceptions.ThrowException": "warning",
     "exceptions.ThrowNullPointerException": "info",
     "exceptions.ThrowRuntimeException": "info",
