--- a/tests/Makefile
+++ b/tests/Makefile
@@ -204,7 +204,7 @@ test-lint-bazel:
 	../scripts/run-buildifier --lint=warn --mode=check
 
 test-lint-groovy:
-	cd ..; scripts/run-groovy-lint --loglevel warning --failon error $(GROOVYLINT_OUTPUT_ARGS)
+	cd ../; bazel run //bazel/tools:groovy-lint -- --failon=error --noserver $(GROOVYLINT_OUTPUT_ARGS) `pwd`/buildscripts/
 
 test-performance:
 	$(UVENV) "$(realpath performance)/perftest.sh"
