Change path for 'test-gui-e2e-non-free' target
Non-free test now also include 'ultimate' folder with OTel tests,
the change is needed to include those tests into to suite.

Change-Id: I803c727e72b27512e5e467da51f84fdc6401ba43

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -224,7 +224,7 @@ test-gui-e2e test-gui-e2e-pro: prepare-playwright # full e2e test is done for pr
 
 test-gui-e2e-non-free: prepare-playwright # limited e2e test for non-free editions (pro or higher)
 	$(PYTEST) --screenshot=only-on-failure --output="$$RESULT_PATH/" --tracing=retain-on-failure \
-	$(PYTEST_SYSTEM_TEST_ARGS) --cmk-edition $(EDITION) $(realpath gui_e2e)/nonfree/pro --numprocesses=1
+	$(PYTEST_SYSTEM_TEST_ARGS) --cmk-edition $(EDITION) $(realpath gui_e2e)/nonfree --numprocesses=1
 
 test-gui-e2e-ultimate:
 	EDITION=ultimate $(MAKE) test-gui-e2e-non-free
